Using new launcher in server scripts
git-svn-id: https://svn.codehaus.org/mule/trunk@623 bf997673-6b11-0410-b953-e057580c5b09